# zephyr_h723vg_esp_hosted_mcu_sdio

./: .gitignore  CMakeLists.txt  prj.conf
.github/workflows/: codeql.yml
boards/arm/h723/: Kconfig.h723  board.cmake  board.yml  h723.dts  h723.yaml  h723_defconfig
proto/: esp_hosted_rpc.pb.c  esp_hosted_rpc.pb.h
src/: esp_hosted.c  main.c  sdio_io.c  sdio_io.h  shell.c
